<resources>
    <string name="app_name">Orientation</string>
    <string name="action_statistics">Statistics</string>
    <string name="action_settings">Settings</string>
    <string name="action_sensors">Sensors</string>
    <string name="action_cube">Cube</string>
    <string name="action_documentation">Documentation</string>
    <string name="action_pdf">PDF</string>
    <string name="action_web">Open Web Link</string>
    <string name="label_fragment_statistics">Statistics Fragment</string>
    <string name="label_fragment_main">Main Fragment</string>
    <string name="label_fragment_settings">Settings Fragment</string>
    <string name="label_fragment_documentation">Documentation</string>
    <string name="label_name_value">%s = %s</string>
    <string name="label_value_degree">%s°</string>
    <string name="label_done">Done</string>
    <string name="label_reset_default_values">Reset Default Values</string>
    <string name="label_method">Method</string>
    <string name="label_property">Property</string>
    <string name="label_acceleration_factor">Acceleration Factor (Critical Damped Rotation)</string>
    <string name="label_filter_coefficient">Filter Coefficient (Sensor Fusion)</string>
    <string name="label_time_constant">Time Constant (Low Pass Filter)</string>
    <string name="label_parameters">Parameters</string>
    <string name="label_accelerometer">Accelerometer</string>
    <string name="label_magnetometer">Magnetometer</string>
    <string name="label_gyroscope">Gyroscope</string>
    <string name="label_acceleration_value">a = 0.70</string>
    <string name="label_time_constant_value">t = 0.40</string>
    <string name="label_variance_accelerometer">Accelerometer Variance</string>
    <string name="label_variance_magnetometer">Magnetometer Variance</string>
    <string name="label_variance_gyroscope">Gyroscope Variance</string>
    <string name="label_filter_coefficient_value">f = 0.98</string>
    <string name="label_processor_consumption_value">0.022</string>
    <string name="label_azimuth">Azimuth</string>
    <string name="label_acceleration_and_magnetometer"><![CDATA[Acceleration & Magnetometer]]></string>
    <string name="label_version_value">1.4.2</string>
    <string name="label_pitch">Pitch</string>
    <string name="label_roll">Roll</string>
    <string name="label_center_azimuth">Center\nAzimuth</string>
    <string name="label_center_altitude">Center\nAltitude</string>
    <string name="label_madgwick">Madgwick</string>
    <string name="label_separated_correction">Separated Correction</string>
    <string name="label_default">Default</string>
    <string name="label_modified">Modified</string>
    <string name="label_accelerometer_magnetometer"><![CDATA[Accelerometer & Magnetometer]]></string>
    <string name="label_rotation_vector">Rotation Vector</string>
    <string name="label_madgwick_filter">Madgwick Filter</string>
    <string name="label_complementary_filter">Complementary Filter</string>
    <string name="label_separated_correction_filter">Separated Correction Filter</string>
    <string name="label_kalman_filter">Kalman Filter</string>
    <string name="label_orthogonal">Orthogonal</string>
    <string name="label_extended_complementary_filter">Extended Complementary Filter</string>
    <string name="label_cube_fragment">Cube Fragment</string>
    <string name="label_mean">Mean</string>
    <string name="label_variance">Variance</string>
    <string name="label_standard_deviation">Deviation</string>
    <string name="label_update_orientation_delay">Update Orientation (ms)</string>
    <string name="label_update_sensor_fusion_delay">Update Sensor Fusion (ms)</string>
    <string name="label_x">X</string>
    <string name="label_z">Z</string>
    <string name="label_y">Y</string>
    <string name="default_method">Rotation Vector</string>
    <string name="default_mean">0.45</string>
    <string name="default_variance">0.023</string>
    <string name="default_acceleration_factor">0.8</string>
    <string name="default_center_altitude">32°</string>
    <string name="default_center_azimuth">32°</string>
    <string name="default_roll">32°</string>
    <string name="default_azimuth">32°</string>
    <string name="default_pitch">32°</string>
    <string name="default_filter_coefficient">0.98</string>
    <string name="default_time_constant">0.2</string>
    <string name="default_angle">0°</string>
    <string name="default_deviation">0.51</string>
    <string name="default_delay">200</string>
    <string name="label_angle_param">%1s°</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_documentation">Documentation</string>
    <string name="label_scf">SCF</string>
    <string name="label_fscf">FSCF</string>
    <string name="label_k_norm">K norm</string>
    <string name="label_gyroscope_drift">Gyroscope drift</string>
    <string name="gyroscope_mean_error">Gyroscope mean error</string>
    <string name="default_double">0.5</string>
    <string name="label_lambda1">lambda1</string>
    <string name="label_lambda2">lambda2</string>
    <string name="label_save">Save</string>
    <string name="label_use_acceleration">Use Acceleration</string>
</resources>

