<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.stho.myorientation.MainActivity">

    <item
        android:id="@+id/action_sensors"
        android:orderInCategory="110"
        android:title="@string/action_sensors"
        android:icon="@drawable/sensors"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_statistics"
        android:orderInCategory="120"
        android:title="@string/action_statistics"
        android:icon="@drawable/statistics"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_documentation"
        android:orderInCategory="130"
        android:title="@string/action_documentation"
        android:icon="@drawable/pdf"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="140"
        android:title="@string/action_settings"
        android:icon="@drawable/settings"
        app:showAsAction="always" />


</menu>