<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/fab_margin"
    tools:context=".SettingsFragment">

    <TextView
        android:id="@+id/label_parameters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
        android:text="@string/label_parameters" />

    <TextView
        android:id="@+id/label_time_constant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_parameters"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/label_time_constant" />

    <TextView
        android:id="@+id/time_constant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_time_constant"
        android:text="@string/default_time_constant" />

    <SeekBar
        android:id="@+id/seekbar_time_constant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_time_constant"
        android:max="100"
        android:progress="20" />

    <TextView
        android:id="@+id/label_filter_coefficient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekbar_time_constant"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/label_filter_coefficient" />

    <TextView
        android:id="@+id/filter_coefficient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_filter_coefficient"
        android:text="@string/default_filter_coefficient" />

    <SeekBar
        android:id="@+id/seekbar_filter_coefficient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_filter_coefficient"
        android:max="100"
        android:progress="20" />

    <TextView
        android:id="@+id/label_acceleration_factor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekbar_filter_coefficient"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/label_acceleration_factor" />

    <TextView
        android:id="@+id/acceleration_factor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/label_acceleration_factor"
        android:text="@string/default_acceleration_factor" />

    <SeekBar
        android:id="@+id/seekbar_acceleration_factor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_acceleration_factor"
        android:max="100"
        android:progress="20" />

     <TextView
        android:id="@+id/label_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/seekbar_acceleration_factor"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/label_property" />

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_property"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_property"
        android:entries="@array/properties" />

    <TextView
        android:id="@+id/label_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinner_property"
        android:layout_marginTop="@dimen/fab_margin"
        android:text="@string/label_method" />


    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/spinner_method"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_method"
        android:entries="@array/methods" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/label_done" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/button_done"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/label_reset_default_values" />

</androidx.constraintlayout.widget.ConstraintLayout>