<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/CubeFragment">

    <fragment
        android:id="@+id/SensorsFragment"
        android:name="com.stho.myorientation.SensorsFragment"
        android:label="@string/label_fragment_main"
        tools:layout="@layout/fragment_sensors"/>

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.stho.myorientation.SettingsFragment"
        android:label="@string/label_fragment_settings"
        tools:layout="@layout/fragment_settings"/>

    <fragment
        android:id="@+id/DocumentationContainerFragment"
        android:name="com.stho.myorientation.DocumentationContainerFragment"
        android:label="@string/label_fragment_documentation"
        tools:layout="@layout/fragment_documentation_container"/>

    <fragment
        android:id="@+id/DocumentationFragment"
        android:name="com.stho.myorientation.DocumentationFragment"
        android:label="@string/label_fragment_documentation"
        tools:layout="@layout/fragment_documentation_container"/>

    <fragment
        android:id="@+id/CubeFragment"
        android:name="com.stho.myorientation.CubeFragment"
        android:label="@string/label_cube_fragment"
        tools:layout="@layout/fragment_cube"/>

    <fragment
        android:id="@+id/StatisticsFragment"
        android:name="com.stho.myorientation.StatisticsFragment"
        android:label="@string/label_fragment_statistics"
        tools:layout="@layout/fragment_statistics"/>

    <action android:id="@+id/action_global_CubeFragment" app:destination="@id/CubeFragment" />
    <action android:id="@+id/action_global_SensorsFragment" app:destination="@id/SensorsFragment"/>
    <action android:id="@+id/action_global_SettingsFragment" app:destination="@id/SettingsFragment" />
    <action android:id="@+id/action_global_StatisticsFragment" app:destination="@id/StatisticsFragment" />
    <action android:id="@+id/action_global_DocumentationContainerFragment" app:destination="@id/DocumentationContainerFragment"/>


</navigation>