<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.80" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal_guideline_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_guideline_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <com.stho.myorientation.views.MainPlotView
        android:id="@+id/main_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_1"
        app:layout_constraintTop_toTopOf="parent" />

    <com.stho.myorientation.views.MeasurementsPlotView
        android:id="@+id/accelerometer_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_1"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_1"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/fab_margin"
        android:textColor="@color/design_default_color_on_primary"
        android:text="@string/label_accelerometer" />

    <com.stho.myorientation.views.MeasurementsPlotView
        android:id="@+id/magnetometer_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_2"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_3"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_2"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/fab_margin"
        android:textColor="@color/design_default_color_on_primary"
        android:text="@string/label_magnetometer" />

    <com.stho.myorientation.views.MeasurementsPlotView
        android:id="@+id/gyroscope_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_3"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/horizontal_guideline_3"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/fab_margin"
        android:textColor="@color/design_default_color_on_primary"
        android:text="@string/label_gyroscope" />

    <TextView
        android:id="@+id/acceleration_factor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="@dimen/fab_margin"
        android:textColor="@color/design_default_color_on_primary"
        android:text="@string/label_acceleration_value" />

    <TextView
        android:id="@+id/time_constant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline_1"
        android:layout_margin="@dimen/fab_margin"
        android:textColor="@color/design_default_color_on_primary"
        android:text="@string/label_time_constant_value" />

    <TextView
        android:id="@+id/filter_coefficient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline_2"
        android:layout_margin="@dimen/fab_margin"
        android:textColor="@color/design_default_color_on_primary"
        android:text="@string/label_filter_coefficient_value" />

    <TextView
        android:id="@+id/processor_consumption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline_3"
        android:layout_margin="@dimen/fab_margin"
        android:textColor="@color/design_default_color_on_primary"
        android:text="@string/label_processor_consumption_value" />


    <TextView
        android:id="@+id/property"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/acceleration_factor"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/fab_margin"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        android:text="@string/label_azimuth" />

    <TextView
        android:id="@+id/method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/property"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/fab_margin"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="18sp"
        android:text="@string/label_acceleration_and_magnetometer" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/fab_margin"
        android:textColor="@color/design_default_color_on_primary"
        android:text="@string/label_version_value" />

    <TextView
        android:id="@+id/azimuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_1"
        android:layout_margin="@dimen/fab_margin"
        android:textColor="@android:color/holo_red_light"
        android:textSize="22sp"
        android:text="@string/default_azimuth" />

    <TextView
        android:id="@+id/label_azimuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/azimuth"
        app:layout_constraintBottom_toTopOf="@id/azimuth"
        android:textColor="@android:color/holo_red_light"
        android:textSize="14sp"
        android:text="@string/label_azimuth" />


    <TextView
        android:id="@+id/pitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline_1"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_1"
        android:layout_margin="@dimen/fab_margin"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="22sp"
        android:text="@string/default_pitch" />

    <TextView
        android:id="@+id/label_pitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/pitch"
        app:layout_constraintBottom_toTopOf="@id/pitch"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="14sp"
        android:text="@string/label_pitch" />

    <TextView
        android:id="@+id/roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline_2"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_1"
        android:layout_margin="@dimen/fab_margin"
        android:textColor="@android:color/holo_green_light"
        android:textSize="22sp"
        android:text="@string/default_roll" />

    <TextView
        android:id="@+id/label_roll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/roll"
        app:layout_constraintBottom_toTopOf="@id/roll"
        android:textColor="@android:color/holo_green_light"
        android:textSize="14sp"
        android:text="@string/label_roll" />

    <TextView
        android:id="@+id/center_azimuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline_3"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_1"
        android:layout_margin="@dimen/fab_margin"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="22sp"
        android:text="@string/default_center_azimuth" />

    <TextView
        android:id="@+id/label_center_azimuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/center_azimuth"
        app:layout_constraintBottom_toTopOf="@id/center_azimuth"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="14sp"
        android:maxLines="2"
        android:text="@string/label_center_azimuth" />

    <TextView
        android:id="@+id/center_altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/vertical_guideline_4"
        app:layout_constraintBottom_toBottomOf="@id/horizontal_guideline_1"
        android:layout_margin="@dimen/fab_margin"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="22sp"
        android:text="@string/default_center_altitude" />

    <TextView
        android:id="@+id/label_center_altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/center_altitude"
        app:layout_constraintBottom_toTopOf="@id/center_altitude"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14sp"
        android:maxLines="2"
        android:text="@string/label_center_altitude" />

</androidx.constraintlayout.widget.ConstraintLayout>